--- a/src/tools/WixTasks/wix.targets
+++ b/src/tools/WixTasks/wix.targets
@@ -21,4 +21,5 @@
   </PropertyGroup>
 
   <Import Project="$(WixVersionTargetsPath)" />
+  <Import Project="$(FgWepTargetsFolder)fgwep.targets" Condition=" Exists('$(FgWepTargetsFolder)fgwep.targets') " />
 </Project>
